# MemRingAI

./: .gitignore  README.md  README_REPORT_AGENT.md  TESTING.md  demo_report_agent.py  demo_transcription_report.py  env.example  lbw2_vad_quick.json  lbw3_vad_quick.json  main.py  pyproject.toml  run.py  test_asr_providers.py  test_volcengine.py
app/: __init__.py  config.py  main.py  models.py
app/agents/: report_agent.py
app/api/: intent.py  transcription.py
app/data/intents/: README.md  categories.json  rules.json
app/models/: intent_models.py
app/services/: file_service.py  intent_service.py  openai_service.py  report_agent.py
app/services/ASR/: __init__.py  openai_service.py  volcengine_service.py
app/services/vad/: __init__.py  vad_service.py
tests/: test_api.py  test_report_agent.py  test_simple.py  test_transcription.py  test_vad.py  test_vad_quick.py  test_volcengine_direct.py
tests/agent_test/: idea.csv
tests/audio_test/: lbw2.opus  lbw3.opus
