[project]
name = "memringai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "librosa>=0.10.1",
    "numpy>=1.24.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "silero-vad>=5.1.2",
    "torch>=2.0.0",
    "uvicorn>=0.35.0",
]
